<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/refresh"
        android:enabled="true"
        android:icon="@drawable/ic_refresh"
        android:title="@string/update"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:enabled="true"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="3"
        app:showAsAction="never" />



</menu>