<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:clickable="false"
            android:fontFamily="@font/bad_script"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="52sp"
            android:textStyle="bold"
            android:typeface="serif"
            tools:text="@string/app_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nik_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nik_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_nik_name"
                android:inputType="text|textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="text|textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />


        </android.support.design.widget.TextInputLayout>


        <!-- Login Button -->

        <Button

            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:width="150dp"
            android:background="@drawable/button"


            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/btn_login"
            android:textColor="#F77062"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/btn_register"
            android:textColor="#F77062"
            android:textSize="14sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnGuest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="Гостевой вход"
            android:textColor="#F77062"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>