<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:alwaysDrawnWithCache="false"
            android:animateLayoutChanges="false"
            android:animationCache="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:fontFamily="@font/bad_script"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="52sp"
                android:textStyle="bold"
                android:typeface="serif"
                tools:text="@string/app_name" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nik_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/inputText">

                <EditText
                    android:id="@+id/nik_name"
                    style="@style/StyledTilEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nik_name"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </android.support.design.widget.TextInputLayout>
            <!-- Login Button -->

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_man"
                    android:textColor="@color/colorWhite"
                    app:buttonTint="@color/colorWhite" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_woman"
                    android:textColor="@color/colorWhite"
                    app:buttonTint="@color/colorWhite" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="Возраст:"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/inputAge"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:background="@drawable/button"
                    android:text="Указать"
                    android:textColor="#F77062"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    tools:ignore="RtlHardcoded">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkContrakt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        app:buttonTint="@color/colorWhite" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtOkContract"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/okContract"
                        android:textColor="@color/colorWhite"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/button"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/btn_register"
                android:textColor="#F77062"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dip"
                android:background="@drawable/button"
                android:paddingLeft="60dp"
                android:paddingRight="50dp"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="true"
                android:textColor="#F77062"

                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </ScrollView>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>