<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bad_script"
            android:text="Редактирование профиля"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"


            android:textStyle="bold"
            android:typeface="serif" />
    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:alwaysDrawnWithCache="false"
            android:animateLayoutChanges="false"
            android:animationCache="false"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imgAvatar"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="2dp" />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nik_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nik_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_nik_name"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="4dp"
                android:text="Пол:"
                android:textColor="@color/white"
                android:textColorHighlight="@color/colorWhite"
                android:textSize="23sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_man"
                    android:textColor="@color/colorWhite"
                    app:buttonTint="@color/colorWhite" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_woman"
                    android:textColor="@color/colorWhite"
                    app:buttonTint="@color/colorWhite" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="Возраст:"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/inputAge"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:background="@drawable/button"
                    android:text="Указать"
                    android:textColor="#F77062"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <Button
                android:id="@+id/btnChangeAvatar"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dip"
                android:background="@drawable/button"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/change_avatar"
                android:textAllCaps="false"
                android:textColor="#F77062"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="Обновить профиль"
                android:textColor="#F77062"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


    </ScrollView>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>
</RelativeLayout>

